# hyperdemocracy

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
example_data/text_versions_xml/: BILLS-118s1073is.xml
hyperdemocracy/: pyproject.toml
hyperdemocracy/datasets/: uscongress.py
hyperdemocracy/hyperdemocracy/: __init__.py  lance.py  langchain_helpers.py  sayhi.py
hyperdemocracy/hyperdemocracy/datasets/: backend.py  base.py  datasets.yaml  test_uscongress.py  uscongress.py
hyperdemocracy/hyperdemocracy/datasets/congress/: uscongress.py
hyperdemocracy/hyperdemocracy/embedding/: models.py
hyperdemocracy/hyperdemocracy/vectorstores/: lance.py
legisqa/: README.md  app.py  pyproject.toml
legisqa/info/: requirements.txt
legisqa/legisqa/: load_nomic_atlas.py  prepare_pgvector.py  sample_output.json  streamlit_app.py
pipeline/: README.md  acquisition.py  my_flow.py  pyproject.toml
sandbox/Quan_graph_project/: test_dataset.ipynb
scripts/: build.sh  create_local_version.sh  install.sh  poetry_lock_update.sh  prep_uscongress_demo.py  projects.sh  streamlit_app.py
