[tool.poetry]
name = "hyperdemocracy"
version = "0.1.0"
description = "hyperdemocracy package"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
xmltodict = "^0.13.0"
pandas = "^2.1.0"
pydantic = "^2.3.0"
lxml = "^4.9.3"
beautifulsoup4 = "^4.12.2"
pyarrow = "^13.0.0"
datasets = "^2.14.5"
langchain = "^0.0.285"


[tool.poetry.group.dev.dependencies]
huggingface-hub = "^0.16.4"
congress = "^0.0a1.dev1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
