[tool.poetry]
name = "hyperdemocracy-monorepo"
version = "0.1.0"
description = "Monorepo container"
authors = ["Gabriel Altay <gabriel.altay@gmail.com>", "Forrest Murray <fmurray@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["VERSION", "README.md"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.0"
conda-lock = "^2.3.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.15.0"
commitizen = "^3.8.1"
flake8 = "^6.1.0"
mypy = "^1.5.1"
dunamai = "^1.18.0"


