[tool.poetry]
name = "hyperdemocracy"
version = "0.1.0"
description = "core python client package for distribution and re-use"
authors = ["Forrest Murray <fmurray@gmail.com>", "Gabriel Altay <gabriel.altay@gmail.com>"]
readme = "README.md"
packages = [{ include = "hyperdemocracy"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
datasets = "^2.14.5"
beautifulsoup4 = "^4.12.2"
xmltodict = "^0.13.0"
pydantic = ">=1.9, <2.0"
lxml = "^4.9.3"
pyarrow = "^13.0.0"
langchain = "^0.0.285"
sentence-transformers = "^2.2.2"
torch = "^2.0.0"
chromadb = "^0.4.9"
openai = "^0.28.0"
lancedb = "^0.2.2"
flagembedding = "^1.0.7"
prefect-shell = "^0.1.5"

[tool.poetry.group.dev.dependencies]
huggingface-hub = "^0.16.4"
united-states-congress = { git = "https://github.com/hyperdemocracy/congress.git" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
