[tool.poetry]
name = "legisqa"
version = "0.1.0"
description = ""
authors = ["Forrest Murray <fmurray@gmail.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
hyperdemocracy = {path="../hyperdemocracy", develop=true}
chromadb = "^0.4.9"
streamlit = "^1.26.0"
langchain = "^0.0.285"
pandas = "^2.1.0"
sentence-transformers = "^2.2.2"
datasets = "^2.14.5"
openai = "^0.28.0"
llama-cpp-python = "^0.2.4"


